--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,10 @@
         "allowSyntheticDefaultImports": true,
         "esModuleInterop": true,
         "jsx": "react-jsx",
+        "baseUrl": ".",
+        "paths": {
+            "*": ["./src/*"]
+        },
         "plugins": [
             {
                 "name": "typescript-plugin-css-modules"
